<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <View
        android:id="@+id/view_view"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/touch_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/view_view"
        app:layout_constraintEnd_toEndOf="@+id/view_view"
        app:layout_constraintStart_toStartOf="@id/view_view"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_200ml"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/ml200"
        app:layout_constraintEnd_toStartOf="@id/btn_500ml"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_view" />

    <Button
        android:id="@+id/btn_500ml"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/ml500"
        app:layout_constraintBottom_toBottomOf="@id/btn_200ml"
        app:layout_constraintEnd_toStartOf="@id/btn_700ml"
        app:layout_constraintStart_toEndOf="@id/btn_200ml"
        app:layout_constraintTop_toBottomOf="@id/view_view" />

    <Button
        android:id="@+id/btn_700ml"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/ml700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_500ml"
        app:layout_constraintTop_toBottomOf="@id/view_view" />

    <TextView
        android:id="@+id/text_output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ouput"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/text_consumer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_500ml"
        android:layout_marginTop="128dp"/>

    <TextView
        android:id="@+id/text_consumer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/consumer"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_output" />

    <Button
        android:id="@+id/btn_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/text_consumer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/clear_all"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>